# Takuzu

./: CMakeLists.txt  Makefile  README.md  brouillon.c  game.c  game.h  game_aux.c  game_ext.c  game_sdl.c  game_solve.c  game_struct.h  game_test_abahraoui.c  game_test_alelaffargue.c  game_test_ext.c  game_test_rolalanne.c  game_test_tools.c  game_text.c  game_tools.c  game_tools.h  model.c  moves.txt  queue.c
ressources/: 4x4.txt  4x4_1.txt  4x4_2.txt  6x4.txt  6x6.txt  8x8.txt  default.txt  solution.txt
web/: demo.html  demo.js  game.css  game.html  game.js  game.wasm  game_script.js  wrapper.c
web/src/: game.c  game.h  game_aux.c  game_aux.h  game_ext.c  game_struct.h
